<resources>
    <string name="app_name">FirstTry</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Password">Password</string>
    <string name="btn_login">Login</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to register</string>
    <string name="register_here">Register Here</string>
    <string name="login_here">Login Here</string>
    <string name="logout">Logout</string>
    <string name="main_page">Main Page</string>
    <string name="fish_detector">Fish Detector</string>
    <string name="home">Home</string>
    <string name="reports">Reports</string>
    <string name="tournaments">Tournaments</string>
    <string name="favorite_spots">Favorite Spots</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="weather_info">Weather Info</string>
    <string name="fish_information">Fish Information</string>
    <string name="others">Others</string>
    <string name="menu">MENU</string>
    <string name="verified">Verified</string>
    <string name="please_select_the_option">Please select the option</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather">Weather</string>
    <string name="this_is_main_activity">This is main activity!</string>
    <string name="amur">Amur</string>
    <string name="caras">Caras</string>
    <string name="crap">Crap</string>
    <string name="biban">Biban</string>
    <string name="salau">Salau</string>
    <string name="stiuca">Stiuca</string>
    <string name="somn">Somn</string>
    <string name="selectati_specia_de_peste_despre_care_doriti_informatii">Selectati specia de peste despre care doriti informatii</string>
    <string name="amur_page">Amur Page</string>
    <string name="go_back">Go Back</string>
    <string name="cyprinus_carpio">Cyprinus carpio</string>
    <string name="temperature_range_3_c_35_c">Temperature range: 3°C - 35°C</string>
    <string name="denumire_stiintifica_cyprinus_carpio">Denumire stiintifica: cyprinus_carpio</string>
    <string name="specie_amur"><b>Specie:</b> Amur</string>
    <string name="denumire_stiintifica_ctenopharyngodon_idella"><b>Denumire stiintifica:</b> Ctenopharyngodon Idella</string>
    <string name="temperatura_0_38_grade_celsius"><b>Temperatura:</b> 0-38 grade Celsius</string>
    <string name="adancime_0_30_metri"><b>Adancime:</b> 0-30 metri</string>
    <string name="dimensiune_maxima_inregistrata_150cm"><b>Dimensiune maxima inregistrata:</b> 150cm</string>
    <string name="greutate_maxima_inregistrata_45kg"><b>Greutate Maxima Inregistrata:</b> 45kg</string>
    <string name="descriere_adul_ii_se_g_sesc_n_lacuri_iazuri_bazine_i_r_uri_mari_prefer_nd_corpuri_de_ap_mari_cu_curgere_lent_sau_st_t_toare_cu_vegeta_ie_toleran_la_o_gam_larg_de_temperaturi_de_la_0_la_38_c_i_salinit_i_p_n_la_10_ppt_i_niveluri_de_oxigen_p_n_la_0_5_ppm_se_hr_ne_te_cu_plante_acvatice_superioare_i_cu_ierburi_scufundate_detritus_insecte_i_alte_nevertebrate_una_dintre_cele_mai_importante_specii_de_acvacultur_din_lume_i_folosit_i_pentru_combaterea_buruienilor_n_r_uri_iazuri_cu_pe_ti_i_rezervoare_depune_icre_pe_albiile_r_urilor_cu_curent_foarte_puternic_considerat_un_d_un_tor_n_majoritatea_rilor_din_cauza_daunelor_aduse_vegeta_iei_scufundate">Descriere: Adulții se găsesc în lacuri, iazuri, bazine și râuri mari, preferând corpuri de apă mari, cu curgere lent sau stătătoare, cu vegetație. Toleranță la o gamă largă de temperaturi de la 0° la 38°C și salinități până la 10 ppt și niveluri de oxigen până la 0,5 ppm. Se hrănește cu plante acvatice superioare și cu ierburi scufundate, detritus, insecte și alte nevertebrate. Una dintre cele mai importante specii de acvacultură din lume și folosită și pentru combaterea buruienilor în râuri, iazuri cu pești și rezervoare. Depune icre pe albiile râurilor cu curent foarte puternic. Considerat un dăunător în majoritatea țărilor din cauza daunelor aduse vegetației scufundate.</string>
    <string name="sursa_https_www_fishbase_de_summary_speciessummary_php_id_79_at_grass_carp"><b>Sursa:</b> https://www.fishbase.de/summary/SpeciesSummary.php?ID=79&amp;AT=grass+carp</string>
    <string name="adul_ii_se_g_sesc_n_lacuri_iazuri_bazine_i_r_uri_mari_prefer_nd_corpuri_de_ap_mari_cu_curgere_lent_sau_st_t_toare_cu_vegeta_ie_toleran_la_o_gam_larg_de_temperaturi_de_la_0_la_38_c_i_salinit_i_p_n_la_10_ppt_i_niveluri_de_oxigen_p_n_la_0_5_ppm_se_hr_ne_te_cu_plante_acvatice_superioare_i_cu_ierburi_scufundate_detritus_insecte_i_alte_nevertebrate_una_dintre_cele_mai_importante_specii_de_acvacultur_din_lume_i_folosit_i_pentru_combaterea_buruienilor_n_r_uri_iazuri_cu_pe_ti_i_rezervoare_depune_icre_pe_albiile_r_urilor_cu_curent_foarte_puternic">Adulții se găsesc în lacuri, iazuri, bazine și râuri mari, preferând corpuri de apă mari, cu curgere lent sau stătătoare, cu vegetație. Toleranță la o gamă largă de temperaturi de la 0° la 38°C și salinități până la 10 ppt și niveluri de oxigen până la 0,5 ppm. Se hrănește cu plante acvatice superioare și cu ierburi scufundate, detritus, insecte și alte nevertebrate. Una dintre cele mai importante specii de acvacultură din lume și folosită și pentru combaterea buruienilor în râuri, iazuri cu pești și rezervoare. Depune icre pe albiile râurilor cu curent foarte puternic.</string>
    <string name="introduceti_cea_mai_apropiata_localitate_de_locul_dorit">Introduceti cea mai apropiata localitate de locul dorit:</string>
    <string name="localitate">Localitate</string>
    <string name="afiseaza">Afiseaza</string>
    <string name="informatii_meteorologice">Informatii meteorologice</string>
    <string name="inapoi">Inapoi</string>
    <string name="this_is_weather_activity">This is weather activity</string>
    <string name="show">Show</string>
    <string name="prognoza_pentru_urmatoarele_7_zile">Prognoza pentru urmatoarele 7 zile</string>
    <string name="timisoara">Timisoara</string>
    <string name="duminica_11_februarie">Duminica 11 februarie</string>
    <string name="_15_c_insorit">15°C Insorit</string>
    <string name="temp_max_temp_min_umiditate_vant">Temp. max. Temp. min. Umiditate Vant</string>
    <string name="city_name">City Name</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="_23">23</string>
    <string name="time">time</string>
    <string name="_13">13</string>
    <string name="vezi_prognoza_pe_7_zile">Vezi prognoza pe 7 zile</string>
    <string name="favorite_place_1">Favorite place 1</string>
    <string name="first_place_description">First place description</string>
    <string name="adaugati_o_postare_noua">Adaugati o postare noua!</string>
    <string name="adaugati_descrierea_aici">Adaugati descrierea aici</string>
    <string name="textul_postarii">Textul postarii</string>
    <string name="adauga_postarea">Adauga postarea!</string>
    <string name="apasati_pe_imagine_pentru_a_incarca_o_fotografie">Apasati pe imagine pentru a incarca o fotografie</string>
    <string name="ad_uga_i_un_nou_loc_favorit">Adăugați un nou loc favorit</string>
    <string name="numele_locului">Numele Locului</string>
    <string name="loca_ia">Locația</string>
    <string name="descriere">Descriere</string>
    <string name="salva_i">Salvați</string>
    <string name="locatia">Locatia</string>
    <string name="locatie">Locatie</string>
    <string name="informatii_amur"><b>Descriere: </b>Adulții se găsesc în lacuri, iazuri, bazine și râuri mari, preferând corpuri de apă mari, cu curgere lent sau stătătoare, cu vegetație. Toleranță la o gamă largă de temperaturi de la 0° la 38°C și salinități până la 10 ppt și niveluri de oxigen până la 0,5 ppm. Se hrănește cu plante acvatice superioare și cu ierburi scufundate, detritus, insecte și alte nevertebrate. Una dintre cele mai importante specii de acvacultură din lume și folosită și pentru combaterea buruienilor în râuri, iazuri cu pești și rezervoare. Depune icre pe albiile râurilor cu curent foarte puternic.</string>
    <string name="specie_caras"><b>Specie:</b> Caras</string>
    <string name="denumire_caras"><b>Denumire stiintifica:</b> Carrassius gibelio</string>
    <string name="temperatura_caras"><b>Temperatura:</b> 10-20 grade Celsius</string>
    <string name="adancime_caras"><b>Adancime:</b> 0-? metri</string>
    <string name="dimensiune_caras"><b>Dimensiune maxima inregistrata:</b> 46.6cm</string>
    <string name="greutate_caras"><b>Greutate Maxima Inregistrata:</b> 3kg</string>
    <string name="descriere_caras"><b>Descriere: </b>Locuiește într-o mare varietate de corpuri de apă liniștită și râuri de câmpie, de obicei asociate cu vegetație scufundată sau inundații regulate. Poate tolera puternic concentrații scăzute de oxigen și poluare. Indivizii care locuiesc la lac se deplasează în gurile râului pentru a evita apa cu oxigen scăzut în timpul iernii. Larvele de hrănire și juvenilii apar în habitate cu complexitate ridicată sub formă de curele de stuf. Se hrănește cu plancton, nevertebrate bentonice, material vegetal și detritus. Depune icre pe țărmuri puțin adânci și calde pe vegetația scufundată. Capabil să se reproducă din ouă nefertilizate (ginogeneză). Durata de viață ajunge până la aproximativ 10 ani. Europa de Est sau formă sălbatică a peștelui auriu.</string>
    <string name="sursa_caras"><b>Sursa: </b>https://www.fishbase.de/summary/SpeciesSummary.php?ID=6376&amp;AT=Prussian+carp</string>
    <string name="specie_crap"><b>Specie:</b> Crap</string>
    <string name="denumire_crap"><b>Denumire stiintifica:</b> Cyprinus carpio</string>
    <string name="temperatura_crap"><b>Temperatura:</b> 3-35 grade Celsius</string>
    <string name="adancime_crap"><b>Adancime:</b> 0-29 metri</string>
    <string name="dimensiune_crap"><b>Dimensiune maxima inregistrata:</b> 120cm</string>
    <string name="greutate_crap"><b>Greutate Maxima Inregistrata:</b> 40.1kg</string>
    <string name="descriere_crap"><b>Descriere: </b>Locuiește în ape calde, adânci, cu curgere lentă și calme, cum ar fi râurile de câmpie și lacurile mari, bine vegetate. Rezistent și tolerant la o mare varietate de condiții, dar în general favorizează corpurile mari de apă cu apă care curge lentă sau stătătoare și sedimente de fund moale. Cel mai activ în amurg și în zori. Atât adulții, cât și tinerii se hrănesc cu o varietate de organisme bentonice și material vegetal. Se înmulțește de-a lungul țărmurilor sau în zone izolate. Adulții întreprind adesea o migrație considerabilă de depunere a icrelor către tărâmuri adecvate și pajiști inundate. Păstrarea acvariului: în grupuri de 5 sau mai multe persoane; dimensiunea minimă a acvariului >200 cm; nu este recomandat pentru acvariile de acasă</string>
    <string name="sursa_crap"><b>Sursa: </b>https://www.fishbase.de/summary/SpeciesSummary.php?ID=1450&amp;AT=common+carp</string>
    <string name="specie_somn"><b>Specie:</b> Somn</string>
    <string name="denumire_somn"><b>Denumire stiintifica:</b> Silurus glanis</string>
    <string name="temperatura_somn"><b>Temperatura:</b> 4-20 grade Celsius</string>
    <string name="adancime_somn"><b>Adancime:</b> 0-30 metri</string>
    <string name="dimensiune_somn"><b>Dimensiune maxima inregistrata:</b> 273cm</string>
    <string name="greutate_somn"><b>Greutate Maxima Inregistrata:</b> 130kg</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="tournament_location">Tournament Location</string>
    <string name="tournament_starting_hour">Tournament Starting Hour</string>
    <string name="tournament_description">Tournament description</string>
    <string name="tournament_starting_date">Tournament Starting Date</string>
</resources>