<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddButton">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/adaugati_o_postare_noua"
        android:background="#A020F0"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#FFF"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inapoi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/apasati_pe_imagine_pentru_a_incarca_o_fotografie"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/upload"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/postImage"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/textul_postarii"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/postText"
        android:hint="@string/adaugati_descrierea_aici"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/adauga_postarea"
        android:textSize="21sp"
        android:textAllCaps="false"
        android:gravity="center"
        android:id="@+id/postAdd"/>





</LinearLayout>