<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Caras">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inapoi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"/>



    <ImageView
        android:id="@+id/fishImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/caras"
        />

    <TextView
        android:id="@+id/speciesNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/specie_caras"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/fishImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fishImageView" />

    <TextView
        android:id="@+id/scientificNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/denumire_caras"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/fishImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speciesNameTextView" />

    <TextView
        android:id="@+id/temperatureRangeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/temperatura_caras"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/fishImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scientificNameTextView" />

    <TextView
        android:id="@+id/adancimeRangeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/adancime_caras"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/fishImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureRangeTextView" />

    <TextView
        android:id="@+id/dimensiuneMaxima"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dimensiune_caras"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/fishImageView"
        app:layout_constraintTop_toBottomOf="@id/adancimeRangeTextView" />

    <TextView
        android:id="@+id/greutateMaxima"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/greutate_caras"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/fishImageView"
        app:layout_constraintTop_toBottomOf="@id/dimensiuneMaxima" />

    <TextView
        android:id="@+id/descriere"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descriere_caras"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/greutateMaxima" />

    <TextView
        android:id="@+id/sursa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sursa_caras"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriere" />




</androidx.constraintlayout.widget.ConstraintLayout>
