<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TourCard"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/TourImg"
                android:scaleType="centerCrop"
                android:src="@drawable/concurs1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tournament_name"
                android:textSize="30sp"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:id="@+id/TourName"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tournament_location"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/TourLocation"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tournament_starting_hour"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/TourHour"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tournament_starting_date"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/TourDate"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tournament_description"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/TourDesc"
                android:padding="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
