<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FavCard"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/FavImg"
                android:scaleType="centerCrop"
                android:src="@drawable/imaginelac"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorite_place_1"
                android:textSize="30sp"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:id="@+id/FavTitle"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locatie"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/FavLocation"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_place_description"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/FavDetails"
                android:padding="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
